##########################
# Setup.py Configuration #
##########################
[metadata]
name = conso
version = attr: src.conso.version.VERSION
description = Tools supporting curation of knowledge in neurodegeneration
long_description = file: README.md

# URLs associated with the project
url = https://github.com/pharmacome/terminology
download_url = https://github.com/pharmacome/terminology/releases
project_urls =
    Bug Tracker = https://github.com/pharmacome/terminology/issues
    Source Code = https://github.com/pharmacome/terminology

# Author information
author = Charles Tapley Hoyt
author_email = charles.hoyt@scai.fraunhofer.de
maintainer = Charles Tapley Hoyt
maintainer_email = charles.hoyt@scai.fraunhofer.de

# License Information
license = MIT License
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
	Environment :: Console
    Intended Audience :: Developers
	Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
	Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
	Topic :: Scientific/Engineering :: Bio-Informatics
	Topic :: Scientific/Engineering :: Chemistry
keywords =
	Biological Expression Language
	BEL
	Systems Biology
	Networks Biology

[options]
install_requires =
    pandas

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.6

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
docs =
	sphinx
	sphinx-rtd-theme
	sphinx-click
	sphinx-autodoc-typehints

[options.entry_points]
#console_scripts =
#    conso = conso.cli:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = conso
omit =
    tests/*
    docs/*
    scripts/*

[coverage:paths]
source =
    src/conso
    .tox/*/lib/python*/site-packages/conso

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__
